--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.js"></script>
+
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -33,6 +35,7 @@
       <h3 class="btn btn-danger" id="volume">Volume</h3>
     </div>
 	<br><br>
+  <button onclick="play();" class="btn btn-success play_button">Play</button>
 </center>
 
 <script src="main.js"></script>
